test/users/ferguson/recordassignstring.good
recordassignstring.chpl:10: error: type mismatch in assignment from string to Point
